fix: resolution of question 02 - Stack of module 5